--- a/src/LandingPage.module.css
+++ b/src/LandingPage.module.css
@@ -4,6 +4,7 @@
     letter-spacing: -0.02em;
     line-height: 34px;
     font-weight: 600;
+    z-index: 2;
 }
 .ourServices {
     position: relative;
@@ -158,7 +159,7 @@
     padding: 24px 100px 64px;
     box-sizing: border-box;
     gap: 80px;
-    background-image: url('headerbg.svg');
+    background-image: url('/imageBg.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: top;
